Part 3: 添加测试文件，修改配置文件

--- a/test/Makefile.am
+++ b/test/Makefile.am
@@ -1,7 +1,7 @@
-bin_PROGRAMS = test-create test-join test-mutex test-cond test-preempt
+bin_PROGRAMS = test-create test-join test-mutex test-cond test-burgers test-preempt
 
 # these are run by 'make check'
-TESTS = test-create test-join test-mutex test-cond test-preempt
+TESTS = test-create test-join test-mutex test-cond test-burgers test-preempt
 
 ldadd = ../lib/libsthread.la
 AM_LDFLAGS = ../lib/sthread_start.o
@@ -16,6 +16,9 @@ test_mutex_SOURCES = test-mutex.c
 
 test_cond_SOURCES = test-cond.c
 
+test_burgers_SOURCES = test-preempt.c
+
 test_preempt_SOURCES = test-preempt.c
+
 
 
